--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,7 @@
+#连接数据库的配置
 spring.datasource.username=root
 spring.datasource.password=123456
 spring.datasource.url=jdbc:mysql://localhost:3306/mall_pms?useSSL=true&serverTimezone=UTC&characterEncoding=UTF-8
+
+#配置Mybatis的xml文件的位置
+mybatis.mapper-locations=classpath:mapper/*.xml
