--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/mall_pms?useSSL=true&serverTim
 
 #配置Mybatis的xml文件的位置
 mybatis.mapper-locations=classpath:mapper/*.xml
+mybatis.type-aliases-package=com.tedu.csmall.product.pojo.vo
+
+#配置SLF4j日志的显示级别
+logging.level.com.tedu.csmall=trace
